# deltachat-touch

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  LICENSE  README.md  clickable.yaml  deltatouch-SBOM.spdx  deltatouch.apparmor  deltatouch.desktop.in  deltatouch.url-dispatcher  main.cpp  manifest.json.in
assets/: Infos.md  LICENSE-external-link-black_external-link-white  assets.qrc  attachment-white.svg.license  audio-input-microphone-symbolic-white.svg.license  contact-white.svg.license  edit-copy-white.svg.license  external-link-black.svg.license  external-link-white.svg.license  media-skip-downwards.svg.license  shield-empty.svg.license  shield-filled.svg.license  stock_image-white.svg.license  stock_music-white.svg.license
assets/coreTranslations/: INFO.md  ar.txt  az.txt  bg.txt  bqi.txt  ca.txt  ckb.txt  cs.txt  da.txt  de.txt  el.txt  en.txt  eo.txt  es.txt  eu.txt  fa.txt  fi.txt  fr.txt  gl.txt  hr.txt  hu.txt  id.txt  it.txt  ja_JP.txt  km.txt  ko.txt  lt.txt  nb.txt  nl_NL.txt  pl.txt  pt.txt  pt_BR.txt  ro.txt  ru.txt  sc.txt  sk.txt  sq.txt  sr.txt  sv.txt  ta.txt  (+6 more)
assets/suru-icons/: license-info.txt
assets/webxdc/: cppside.js  fetchReplacement.js  hideInputSymbol.css  sandboxed_iframe_rtcpeerconnection_check.html  webxdc.js  wrapper.html
deltachat-core/: INFO.md
extra/droidian/: deltatouch.desktop  deltatouch.sh  dt.sh
libs/patches/: dc_core_rust-CMakeLists.patch  quirc_Makefile.patch
plugins/: CMakeLists.txt
plugins/DTWebEngineProfile/: CMakeLists.txt  DTWebEngineProfile.cpp  DTWebEngineProfile.h  DTWebEngineUrlRequestInterceptor.cpp  DTWebEngineUrlRequestInterceptor.h  plugin.cpp  plugin.h  qmldir
plugins/DeltaHandler/: .chatmodel.cpp.swp  CMakeLists.txt  accountsmodel.cpp  accountsmodel.h  blockedcontactsmodel.cpp  blockedcontactsmodel.h  chatlistmodel.cpp  chatlistmodel.h  chatmodel.cpp  chatmodel.h  contactsmodel.cpp  contactsmodel.h  dbusUrlReceiver.cpp  dbusUrlReceiver.h  deltahandler.cpp  deltahandler.h  emitterthread.cpp  emitterthread.h  fileImportSignalHelper.cpp  fileImportSignalHelper.h  groupmembermodel.cpp  groupmembermodel.h  ifElseSetCoreTranslation.cpp  jsonrpcresponsethread.cpp  jsonrpcresponsethread.h  notificationGenerator.cpp  notificationGenerator.h  notificationHelper.cpp  notificationHelper.h  notificationsFreedesktop.cpp  notificationsFreedesktop.h  notificationsLomiriPostal.cpp  notificationsLomiriPostal.h  notificationsMissing.cpp  notificationsMissing.h  plugin.cpp  plugin.h  qmldir  webxdcImageProvider.cpp  webxdcImageProvider.h  (+4 more)
plugins/HtmlMsgEngineProfile/: CMakeLists.txt  htmlMsgEngineProfile.cpp  htmlMsgEngineProfile.h  htmlMsgRequestInterceptor.cpp  htmlMsgRequestInterceptor.h  htmlMsgSchemeHandler.cpp  htmlMsgSchemeHandler.h  plugin.cpp  plugin.h  qmldir
plugins/WebxdcEngineProfile/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  webxdcEngineProfile.cpp  webxdcEngineProfile.h  webxdcRequestInterceptor.cpp  webxdcRequestInterceptor.h  webxdcSchemeHandler.cpp  webxdcSchemeHandler.h
po/: CMakeLists.txt  ar.po  az.po  bg.po  bqi.po  ca.po  ckb.po  cs.po  da.po  de.po  de_DE.mo  de_DE.po  deltatouch.lotharketterer.pot  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja_JP.po  km.po  ko.po  la.po  lt.po  nah.po  nb.po  nl_NL.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sc.po  sk.po  (+11 more)
qml/: Main.qml  client.mjs  emojis.js  jsonrpc.mjs  qml.qrc
qml/delegates/: delegInfoMsg.qml  delegOtherAnimatedImage.qml  delegOtherAudio.qml  delegOtherImage.qml  delegOtherTextMsg.qml  delegOtherToDownload.qml  delegOtherUnknown.qml  delegSelfAnimatedImage.qml  delegSelfAudio.qml  delegSelfImage.qml  delegSelfTextMsg.qml  delegSelfToDownload.qml  delegSelfUnknown.qml  delegUnreadMsgsBar.qml
qml/pages/: .ChatView.qml.swp  About.qml  AccountConfig.qml  AccountConfigPageSettings.qml  AccountSwitcherDelegate.qml  AccountsExperimentalSettingsSwitch.qml  AddAccount.qml  AddAccountAsSecondDevice.qml  AddAccountViaQr.qml  AddAccountViaQrInvitationCode.qml  AddChat.qml  AddChatForContact.qml  AddOrConfigureEmailAccount.qml  AddSecondDevice.qml  AdvancedSettings.qml  AlreadyHaveProfilePopup.qml  AttachmentPopup.qml  BlockContactPopup.qml  BlockedContacts.qml  ChangeDatabasePassword.qml  ChatInfosActions.qml  ChatInfosActionsChatlist.qml  ChatInfosActionsChatview.qml  ChatView.qml  ConfirmAccountDeletion.qml  (+83 more)
(+4 files in other folders)
